--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
+/.idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
@@ -174,4 +174,7 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
+.metadata
+
 # End of https://www.toptal.com/developers/gitignore/api/intellij,macos,java
+
